# authenticity-link-builder

./: .gitignore  README.md  generate_websites.py  netlify.toml  prepare_for_github_pages.sh  pyproject.toml  requirements.txt  vite.config.ts
.github/workflows/: deploy.yml
docs/: index.html
